[package]
name = "sp105e-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
sp105e = { path = "../sp105e", features = [ "client", "clap" ]}
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
pretty_env_logger = "0.5.0"
log = "0.4.25"
